some changes done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/img1.jpg" alt="Los Angeles" width="1100" height="400">
+      <img src="img1.jpg" alt="Los Angeles" width="1100" height="400">
       <div class="carousel-caption text-danger">
         <h1>Create your first website today</h1>
         <h5>Starting at only $2.38/mo*</h5>
@@ -49,7 +49,7 @@
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="images/img5.jpg" alt="Chicago" width="1100" height="500">
+      <img src="img5.jpg" alt="Chicago" width="1100" height="500">
       <div class="text-danger carousel-caption">
         
         <h1>Create your first website today</h1>
@@ -58,7 +58,7 @@
       </div>   
     </div>
     <div class="carousel-item">
-      <img src="images/img6.jpg" alt="New York" width="1100" height="500">
+      <img src="img6.jpg" alt="New York" width="1100" height="500">
       <div class=" text-danger carousel-caption">
         
         <h1>Create your first website today</h1>
@@ -91,7 +91,7 @@
 		</div>
 		
 		<div class="col-sm-6 div6">
-			<img class="img-fluid" src="images/img1.jpg">
+			<img class="img-fluid" src="img1.jpg">
 			
 			
 		</div>
@@ -100,7 +100,7 @@
 	<div class="row m-2">
 
 		<div class="col-sm-6  div7">
-			<img class="img-fluid hi" src="images/img1.jpg">
+			<img class="img-fluid hi" src="img1.jpg">
 			
 		</div>
 		<div class=" col-sm-6 div8">
@@ -130,7 +130,7 @@
 		</div>
 		
 		<div class="col-sm-6 div10">
-			<img class="img-fluid" src="images/img1.jpg">
+			<img class="img-fluid" src="img1.jpg">
 			
 			
 		</div>
@@ -144,7 +144,7 @@
 
 			<div class="col-sm-4 div12">
 				<h3>Web Hosting</h3>
-				<img src="images/img1.jpg"/>
+				<img src="img1.jpg"/>
 				<li>User-friendly building tools</li>
 				<li>Host unlimited domain</li>
 				<li>Perfect for small sites/blogs</li>
@@ -157,7 +157,7 @@
 
 			<div class="col-sm-4 div13">
 				<h3>Wordpress Hosting</h3>
-				<img src="images/img1.jpg"/>
+				<img src="img1.jpg"/>
 				<li>User-friendly building tools</li>
 				<li>Host unlimited domain</li>
 				<li>Perfect for small sites/blogs</li>
@@ -170,7 +170,7 @@
 
 			<div class="col-sm-4 div14">
 				<h3>Cloud Hosting</h3>
-				<img src="images/img1.jpg"/>
+				<img src="img1.jpg"/>
 				<li>User-friendly building tools</li>
 				<li>Host unlimited domain</li>
 				<li>Perfect for small sites/blogs</li>
@@ -187,7 +187,7 @@
 
 			<div class="col-sm-4 div16">
 				<h3>Web Hosting</h3>
-				<img src="images/img1.jpg"/>
+				<img src="img1.jpg"/>
 				<li>User-friendly building tools</li>
 				<li>Host unlimited domain</li>
 				<li>Perfect for small sites/blogs</li>
@@ -200,7 +200,7 @@
 
 			<div class="col-sm-4 div17">
 				<h3>Wordpress Hosting</h3>
-				<img src="images/img1.jpg"/>
+				<img src="img1.jpg"/>
 				<li>User-friendly building tools</li>
 				<li>Host unlimited domain</li>
 				<li>Perfect for small sites/blogs</li>
@@ -213,7 +213,7 @@
 
 			<div class="col-sm-4 div18">
 				<h3>Cloud Hosting</h3>
-				<img src="images/img1.jpg"/>
+				<img src="img1.jpg"/>
 				<li>User-friendly building tools</li>
 				<li>Host unlimited domain</li>
 				<li>Perfect for small sites/blogs</li>
@@ -290,13 +290,13 @@
 		<div class="container jumbotron">
 			<div class="row">
 			<div class="col-sm-6 text-center">
-				<img class="rounded-circle img-fluid" src="images/talk.jpg" width="100" />
+				<img class="rounded-circle img-fluid" src="talk.jpg" width="100" />
 				<p><b>Let's talk</b><br>
 				hello how are you , what is going on</p>
 			</div>
 
 			<div class="col-sm-6 text-center ">
-				<img class="rounded-circle img-fluid" width="100" src="images/support.png"/>
+				<img class="rounded-circle img-fluid" width="100" src="support.png"/>
 				<p><b>Go to support center</b><br>
 				hello how are you , what is going on</p>
 			</div>
